<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    tools:ignore="AppCompatResource">
    <item
        android:id="@+id/graphs"
        compat:showAsAction="always"
        android:title="@string/graphs"
        android:icon="@drawable/ic_line_chart_32"

         />
    <item
        android:id="@+id/pref"
        compat:showAsAction="always"
        android:title="@string/pref"
        android:icon="@drawable/ic_pref_32"

        />

    <item
        android:id="@+id/account"
        compat:showAsAction="ifRoom"
        android:title="@string/account"
        android:icon="@drawable/ic_profile_32"
        />
    <item
        android:id="@+id/info"
        compat:showAsAction="ifRoom"
        android:title="@string/info"
        android:icon="@drawable/ic_help_32"

         />
    <item
        android:id="@+id/exit"
        android:title="@string/exit"

        />
</menu>
