<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.WelcomeActivity"
    android:background="@drawable/bg"
    android:id="@+id/welcome_rl"
    >


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/welcome_bg_desc"
        android:scaleType="centerCrop">
    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView23"
        android:layout_gravity="center_horizontal"
        android:textSize="48sp"
        android:textColor="#CCffffff"
        android:layout_marginTop="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/btn_signin"
            android:onClick="SignIn"
            android:text="@string/signin"

            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/btn_reg"
            android:onClick="Registration"
            android:text="@string/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Large Text"
        android:id="@+id/welcome_tv_proc"
        android:textColor="#CCffffff"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
