<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pref_main_layout">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <FrameLayout
        android:id="@+id/sample_content_fragment"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0px" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/notif_pref"
            android:id="@+id/pref_tv_notif"
            android:padding="10dp"
            android:clickable="true"
            android:onClick="startCommonPrefActivity"/>
        <View style="@style/Divider" android:layout_below="@id/pref_tv_notif" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pref_crit_notif"
            android:id="@+id/pref_tv_crit"
            android:layout_below="@+id/pref_tv_notif"
            android:padding="10dp"
            android:clickable="true"
            android:onClick="startCritPrefActivity"
             />
        <View style="@style/Divider" android:layout_below="@id/pref_tv_crit" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/auto_watering_pref"
            android:id="@+id/pref_tv_aw"
            android:layout_below="@+id/pref_tv_crit"
            android:padding="10dp"
            android:clickable="true"
            android:onClick="startAWPrefActivity"
             />
        <View style="@style/Divider" android:layout_below="@id/pref_tv_aw" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/themes"
            android:id="@+id/pref_tv_theme"
            android:layout_below="@+id/pref_tv_aw"
            android:padding="10dp"
            android:clickable="true"
            android:onClick="startThemePrefActivity"
             />
        <View style="@style/Divider" android:layout_below="@id/pref_tv_theme"
            android:id="@+id/view3" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="startAccountPrefActivity"
            android:layout_below="@+id/pref_tv_theme"
            android:id="@+id/pref_ll_account"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/ic_profile_32"
                android:contentDescription="@string/account"
                android:layout_gravity="center_vertical"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/account"
                android:id="@+id/pref_tv_account"
                android:padding="10dp"
                 />
        </LinearLayout>
        <View style="@style/Divider" android:layout_below="@id/pref_ll_account"
            android:id="@+id/view8" />



    </RelativeLayout>

</LinearLayout>