<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/edit_username"
        android:width="250dp"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/textView6"
        android:gravity="center"
        android:layout_alignBaseline="@+id/edit_username"
        android:layout_alignBottom="@+id/edit_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_password"
        android:layout_below="@+id/edit_username"
        android:layout_alignRight="@+id/edit_username"
        android:layout_alignEnd="@+id/edit_username"
        android:layout_alignLeft="@+id/edit_username"
        android:layout_alignStart="@+id/edit_username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/textView9"
        android:gravity="center"
        android:layout_alignBaseline="@+id/edit_password"
        android:layout_alignBottom="@+id/edit_password" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savelogin"
        android:id="@+id/chkBoxLogin"
        android:checked="false"
        android:singleLine="false"
        android:layout_below="@+id/edit_password"
        android:layout_alignLeft="@+id/edit_password"
        android:layout_alignStart="@+id/edit_password" />

</RelativeLayout>