<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"


    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

      <LinearLayout
          android:id="@+id/pref_relative"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:id="@+id/pref_c_ll_label">
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:text="@string/notif_pref"
                  android:id="@+id/pref_tv_notif_label"                   />
              <View style="@style/Divider"/>

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:id="@+id/pref_c_ll_period">
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:text="@string/notif_period"
                  android:id="@+id/textView19"
                   />
              <Spinner
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/pref_period_spinner"
                   />
              <View style="@style/Divider"/>
          </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/pref_c_ll_sound"
                android:onClick="SetNotifSound"
                android:clickable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/notif_sound_label"
                    android:id="@+id/textView22"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/pref_tv_setnotifsound"
                    android:text=""
                    />
                <View style="@style/Divider"/>
            </LinearLayout>


        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:id="@+id/pref_c_ll_vibrate"
            android:onClick="SetNotifVibrate"
            android:clickable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/notif_vibrate_label"
                android:id="@+id/textView23"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/pref_tv_setnotifvibrate"
                android:text=""/>
            <View style="@style/Divider"/>
        </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:id="@+id/pref_c_ll_color"
              android:onClick="SetNotifColor"
              android:clickable="true">
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:text="@string/notif_color_label"
                  android:id="@+id/textView24"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:id="@+id/pref_tv_setnotifcolor"
                  android:text=""
                  />
              <View style="@style/Divider"/>
          </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Отключить все уведомления?"
            android:id="@+id/cb_notify_all"
            android:checked="false"
            />

    </LinearLayout>



      </LinearLayout>
</ScrollView>