<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity_layout"
    >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        >
    </ImageView>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ctrl_spinner"
        android:spinnerMode="dropdown"
        android:textColor="#ffffff"
        android:layout_toLeftOf="@+id/pref_tv_edit"
        android:layout_toStartOf="@+id/pref_tv_edit"
        android:layout_marginTop="10dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_32"
        android:layout_alignBottom="@+id/ctrl_spinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/pref_tv_edit"
        android:clickable="true"
        android:onClick="EditCtrl"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/ctrl_spinner"
        android:id="@+id/main_layout"
        android:layout_above="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/light">
            <FrameLayout
                android:id="@+id/frgm_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </FrameLayout>
            <FrameLayout
                android:id="@+id/frgm_co2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:id="@+id/dht"
            android:layout_marginTop="50dp">
            <FrameLayout
                android:id="@+id/frgm_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </FrameLayout>
            <FrameLayout
                android:id="@+id/frgm_hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </FrameLayout>
        </LinearLayout>


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ll_pots_wcans"
                android:columnCount="2"
                android:rowCount="2"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:src="@drawable/ic_empty_128"
                    >

                </ImageView>
                <FrameLayout
                    android:id="@+id/frgm_pot1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1">
                </FrameLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:src="@drawable/ic_empty_64"
                    >
                </ImageView>
                <FrameLayout
                    android:id="@+id/frgm_wcan1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_gravity="top|end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    >
                </FrameLayout>



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:src="@drawable/ic_empty_64"
                    >
                </ImageView>
                <FrameLayout
                    android:id="@+id/frgm_wcan2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    >
                </FrameLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:src="@drawable/ic_empty_128"
                    >
                </ImageView>
                <FrameLayout
                    android:id="@+id/frgm_pot2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="1"
                    >
                </FrameLayout>

            </GridLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_switchs">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Relay 1"
                android:textOff="Выкл"
                android:textOn="Вкл"
                android:id="@+id/tbtn_sw1"
                android:checked="false"
                android:layout_weight="1"
                android:visibility="invisible"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Relay 2"
                android:textOff="Выкл"
                android:textOn="Вкл"
                android:id="@+id/tbtn_sw2"
                android:checked="false"
                android:layout_weight="1"
                android:visibility="invisible"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:id="@+id/textView2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:id="@+id/tv_date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"/>

                <TextView
                    android:id="@+id/tv_main_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="12sp"
                    android:gravity="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action"/>
                <TextView
                    android:id="@+id/tv_main_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="12sp"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>